Elmdroid functional example of default android view with Drawer.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".example1.Example1"
-            android:label="@string/app_name"
+            android:name=".example2.Example2"
+            android:label="@string/title_activity_example2"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,10 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".example2.Example2"
-            android:label="@string/title_activity_example2"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".example1.ExampleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
