--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,11 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
+//    testCompile "org.mockito:mockito-core:1.+"
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'io.kotlintest:kotlintest:2.0.1'
+
+
 }
 repositories {
     mavenCentral()
