--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,17 +25,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.1"
+
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
+
     testCompile 'junit:junit:4.12'
-//    testCompile "org.mockito:mockito-core:1.+"
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'io.kotlintest:kotlintest:2.0.1'
-
-
 }
 repositories {
     mavenCentral()
