--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,13 +21,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:+', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.1'
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.2-2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
@@ -36,8 +34,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'us.feras.mdv:markdownview:1.1.0'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'io.kotlintest:kotlintest:2.0.1'
+//    testCompile 'org.mockito:mockito-core:1.10.19'
+//    testCompile 'io.kotlintest:kotlintest:2.0.1'
 }
 repositories {
     mavenCentral()
