--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.1.3-2'
+
     repositories {
+        mavenCentral()
+
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.2-3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,9 +20,19 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+//task clean(type: Delete) {
+//    delete rootProject.buildDir
+//}
+
+//repositories {
+//    mavenCentral()
+//}
+dependencies {
+    apply plugin: 'kotlin'
+//    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 }
