--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,9 +62,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:+', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     //    testCompile 'org.mockito:mockito-core:1.10.19'
     //    compile 'us.feras.mdv:markdownview:1.1.0'
     //    compile project(':persist-release')
@@ -88,7 +85,17 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.14'
 
+// Robolectric
     testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    testCompile 'org.robolectric:robolectric:3.3.2'
+    testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
+    // Fix for https://github.com/robolectric/robolectric/issues/2566
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:+', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
 }
 repositories {
     mavenCentral()
